--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Toybox Homepage</title>
+	<!-- styles LINKED -->
 	<link rel="stylesheet" href="./styles/styles.css">
+	<!-- scripts LINKED -->
+	<!-- <script src="./scripts/app.js"></script> -->
 </head>
 <body>	
 	<nav class="navBar">
@@ -60,6 +63,8 @@
 			<h3>Go on, let them play with wooden blocks.</h3>
 			<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar
 				tellus.</p>
+				<p id="demo"></p>
+
 			<a class="button">Shop All</a>
 		</div>
 	</div>
@@ -184,5 +189,19 @@
 			</div> <!-- .footerFlexContainer END-->
 		</div> <!-- .wrapper END-->
 	</footer>
+
+	<script>
+		// document.getElementsByClassName("menuIcon").addEventListener("click", displayDate);
+
+		// 	function displayDate() {
+		// 		document.getElementById("demo").innerHTML = Date();
+		// 	}
+
+			document.getElementsByClassName("menuIcon").addEventListener("click", displayDate);
+
+				function displayDate() {
+					document.getElementById("demo").innerHTML = Date();
+				}
+	</script>
 </body>
 </html>
