--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 	<!-- .wrapper END -->
 	
+	<!-- slideOutNav START -->
 	<div class="slideOutNav" id="slideOutNav">
 		<div class="buttonContainer">
 			<button id="menuClose">
@@ -50,7 +51,9 @@
 			</ul>
 		</nav>
 	</div>
+<!-- slideOutNav close -->
 
+<!-- header START -->
 <header>
 	<div class="headerImgContainer wrapper">
 		<img src="./assets/header-image.jpg" alt="A child in overalls playing with colourful wooden blocks on the floor">
@@ -61,66 +64,80 @@
 			<h3>Go on, let them play with wooden blocks.</h3>
 			<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar
 				tellus.</p>
-			<a class="button">Shop All</a>
+			<a href="#categories" class="button">Shop All</a>
 		</div>
 	</div>
 </header>
+<!-- header END -->
 
-
-<main>
-
-<section class="categories" id="categories">
-	<div class="wrapper">
-		<h2>Categories</h2>
-		<p>Explore our range of hand-made toys</p>
-		<ul class="categoryGallery">
-			<li class="items itemOne">
-				<a href="">
-					<img src="./assets/safari-trio.jpg" alt="Hand-carved safari animal toys">
-					<h4>Safari</h4>
-					<p>Land-dwelling African Favourites</p>
-				</a>
-			</li>
-			<li class="items itemTwo">
-				<a href="">
-					<img src="./assets/ocean-trio.jpg" alt="A collection of ocean-themed animal toys">
-					<h4>Ocean</h4>
-					<p>Adorable Aquatic Characters</p>
-				</a>
-			</li>
-			<li class="items itemThree">
-				<a href="">
-					<img src="./assets/dino-trio.jpg" alt="Hand-carved dinosaur toys for kids">
-					<h4>Dinos</h4>
-					<p>Meet These Prehistoric Pals</p>
-				</a>
-			</li>
-			<li class="items itemFour">
-				<a href="">
-					<img src="./assets/sale.jpg" alt="A toddler pulling two wooden animals on wheels">
-					<h4>Sale</h4>
-					<p>Act Quickly and Grab These Bargains</p>
-				</a>
-			</li>
-		</ul> <!-- .categoryGallery END-->
-	</div> <!-- .wrapper END-->
-</section> <!-- .categories END-->
-
-<section class="play" id="play">
-	<div class="playContainer wrapper">
-		<h5>Learning Through Doing</h5>
-		<h3>Let them play.</h3>
-		<p>Bauris eget lacus, amet mollis felis, sed posuere odio. Justo purus orci ultricies et. Sit etiam porta sed
-			tellus. Cattis pellentesque felis tristique eget purus feugiat massa.</p>
-		<button class="solid">Learn About Us</button>
+<!-- modal START -->
+<div class="modalOverlay">
+	<div class="modalContainer">
+		<h5>
+			Free shipping for orders over $99 plus 10% Off with code: hello10 
+		</h5>
+		<button class="closeBtn">
+			<img src="./assets/menu-close.svg" alt="close navigation">
+		</button>
 	</div>
-</section>
+</div>
 
 
+<!-- modal END -->
 
+<!-- main START -->
+<main>
+	<section class="categories" id="categories">
+		<div class="wrapper">
+			<h2>Categories</h2>
+			<p>Explore our range of hand-made toys</p>
+			<ul class="categoryGallery">
+				<li class="items itemOne">
+					<a href="">
+						<img src="./assets/safari-trio.jpg" alt="Hand-carved safari animal toys">
+						<h4>Safari</h4>
+						<p>Land-dwelling African Favourites</p>
+					</a>
+				</li>
+				<li class="items itemTwo">
+					<a href="">
+						<img src="./assets/ocean-trio.jpg" alt="A collection of ocean-themed animal toys">
+						<h4>Ocean</h4>
+						<p>Adorable Aquatic Characters</p>
+					</a>
+				</li>
+				<li class="items itemThree">
+					<a href="">
+						<img src="./assets/dino-trio.jpg" alt="Hand-carved dinosaur toys for kids">
+						<h4>Dinos</h4>
+						<p>Meet These Prehistoric Pals</p>
+					</a>
+				</li>
+				<li class="items itemFour">
+					<a href="">
+						<img src="./assets/sale.jpg" alt="A toddler pulling two wooden animals on wheels">
+						<h4>Sale</h4>
+						<p>Act Quickly and Grab These Bargains</p>
+					</a>
+				</li>
+			</ul> <!-- .categoryGallery END-->
+		</div> <!-- .wrapper END-->
+	</section> <!-- .categories END-->
+
+	<section class="play" id="play">
+		<div class="playContainer wrapper">
+			<h5>Learning Through Doing</h5>
+			<h3>Let them play.</h3>
+			<p>Bauris eget lacus, amet mollis felis, sed posuere odio. Justo purus orci ultricies et. Sit etiam porta sed
+				tellus. Cattis pellentesque felis tristique eget purus feugiat massa.</p>
+			<button class="solid">Learn About Us</button>
+		</div>
+	</section>
 </main>
+<!-- main END -->
 
 
+<!-- footer START -->
 	<footer id="footer">
 		<div class="wrapper">
 			<div class="footerFlexContainer">
@@ -185,6 +202,8 @@
 			</div> <!-- .footerFlexContainer END-->
 		</div> <!-- .wrapper END-->
 	</footer>
+	<!-- footer END -->
+
 	<!-- scripts LINKED -->
 	<script src="./scripts/app.js"></script>
 </body>
