--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<h3>Go on, let them play with wooden blocks.</h3>
 			<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar
 				tellus.</p>
-			<a href="#categories" class="button">Shop All</a>
+			<a href="#categories" class="button" id="shopAllBtn">Shop All</a>
 		</div>
 	</div>
 </header>
@@ -73,16 +73,12 @@
 <!-- modal START -->
 <div class="modalOverlay">
 	<div class="modalContainer">
-		<h5>
-			Free shipping for orders over $99 plus 10% Off with code: hello10 
-		</h5>
+		<h5>Free shipping for orders over $99 plus 10% Off with code: hello10 </h5>
 		<button class="closeBtn">
 			<img src="./assets/menu-close.svg" alt="close navigation">
 		</button>
 	</div>
 </div>
-
-
 <!-- modal END -->
 
 <!-- main START -->
